nginx/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: my-nginx-deployment
  labels:
    app: project
    type: nginx

spec:
  replicas: 1
  selector:
    matchLabels:
      app: project
      type: nginx
  template:
    metadata:
      name: nginx-pod
      labels:
        app: project
        type: nginx
    spec:
      containers:
        - name: nginx-container
          image: fdobkowski/facebook_nginx
          imagePullPolicy: "IfNotPresent"
